tests/should_succeed/jou_compiler_path_env_var.jou
import "stdlib/process.jou"
import "stdlib/io.jou"

def main() -> int:
    if getenv("JOU_COMPILER_PATH") == NULL:
        printf("not found\n")
        return 1

    f = fopen(getenv("JOU_COMPILER_PATH"), "rb")
    if f == NULL:
        printf("doesn't exist\n")
        return 1

    fclose(f)
    printf("ok\n")  # Output: ok
    return 0
