tests/syntax_error/keyword_uint8.jou
def main() -> int:
    uint8 = 1  # Error: expected an expression, got the 'uint8' keyword
    return 0
